going with a template for now

--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Clints Portfolio</title>
+    <title>Diagoona Template - Contact page</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" /> <!-- https://fonts.google.com/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com/ -->
     <link href="fontawesome/css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
     <link href="css/main.css" rel="stylesheet" />
-</head>
 
+</head>
 <body>
-    <div class="tm-container">        
+    <div class="tm-container">
         <div>
             <div class="tm-row pt-4">
                 <div class="tm-col-left">
@@ -34,8 +34,8 @@
                         </button>
                         <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
                             <ul class="navbar-nav text-uppercase">
-                                <li class="nav-item active">
-                                    <a class="nav-link tm-nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                <li class="nav-item">
+                                    <a class="nav-link tm-nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link tm-nav-link" href="about.html">About</a>
@@ -43,8 +43,8 @@
                                 <li class="nav-item">
                                     <a class="nav-link tm-nav-link" href="services.html">Services</a>
                                 </li>                            
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="contact.html">Contact</a>
+                                <li class="nav-item active">
+                                    <a class="nav-link tm-nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
                                 </li>
                             </ul>                            
                         </div>                        
@@ -54,13 +54,24 @@
             
             <div class="tm-row">
                 <div class="tm-col-left"></div>
-                <main class="tm-col-right">
-                    <section class="tm-content">
-                        <h2 class="mb-5 tm-content-title">Diagoona HTML Template</h2>
-                        <p class="mb-5">Diagoona is provided by TemplateMo website. You are allowed to use this template for your websites. You are NOT allowed to redistribute this template ZIP file for a download purpose on any template collection website.</p>
-                        <hr class="mb-5">
-                        <p class="mb-5">Diagoona is Bootstrap v4.4.1 layout. This BG is 50% transparent. You can set the background images auto play settings (true or false in line number 33) in templatemo-script.js file in js folder.</p>                        
-                        <a href="about.html" class="btn btn-primary">Continue...</a>
+                <main class="tm-col-right tm-contact-main"> <!-- Content -->
+                    <section class="tm-content tm-contact">
+                        <h2 class="mb-4 tm-content-title">Contact Us</h2>
+                        <p class="mb-85">Etiam et egestas arcu. Fusce congue quis elit vitae commodo. Cras neque mauris, vehicula in ipsum sit amet, faucibus aliquam arcu.</p>
+                        <form id="contact-form" action="" method="POST">
+                            <div class="form-group mb-4">
+                                <input type="text" name="name" class="form-control" placeholder="Name" required="" />
+                            </div>
+                            <div class="form-group mb-4">
+                                <input type="email" name="email" class="form-control" placeholder="Email" required="" />
+                            </div>
+                            <div class="form-group mb-5">
+                                <textarea rows="6" name="message" class="form-control" placeholder="Message..." required=""></textarea>
+                            </div>
+                            <div class="text-right">
+                                <button type="submit" class="btn btn-big btn-primary">Send It</button>
+                            </div>
+                        </form>
                     </section>
                 </main>
             </div>
@@ -76,15 +87,14 @@
             </div>        
             <div class="tm-col-right tm-col-footer">
                 <footer class="tm-site-footer text-right">
-                    <p class="mb-0">Copyright 2021 Clint Edwards
+                    <p class="mb-0">Copyright 2020 Diagoona Co. 
                     
                     | Design: <a rel="nofollow" target="_parent" href="https://templatemo.com" class="tm-text-link">TemplateMo</a></p>
                 </footer>
             </div>  
         </div>
 
-        <!-- Diagonal background design -->
-        <div class="tm-bg">
+        <div class="tm-bg"> <!-- Diagonal background design -->
             <div class="tm-bg-left"></div>
             <div class="tm-bg-right"></div>
         </div>
