--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Clints Portfolio</title>
+    <title>Diagoona - Services Page</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" /> <!-- https://fonts.google.com/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com/ -->
     <link href="fontawesome/css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
@@ -34,14 +34,14 @@
                         </button>
                         <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
                             <ul class="navbar-nav text-uppercase">
-                                <li class="nav-item active">
-                                    <a class="nav-link tm-nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                <li class="nav-item">
+                                    <a class="nav-link tm-nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link tm-nav-link" href="about.html">About</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="services.html">Services</a>
+                                <li class="nav-item active">
+                                    <a class="nav-link tm-nav-link" href="services.html">Services <span class="sr-only">(current)</span></a>
                                 </li>                            
                                 <li class="nav-item">
                                     <a class="nav-link tm-nav-link" href="contact.html">Contact</a>
@@ -56,11 +56,28 @@
                 <div class="tm-col-left"></div>
                 <main class="tm-col-right">
                     <section class="tm-content">
-                        <h2 class="mb-5 tm-content-title">Diagoona HTML Template</h2>
-                        <p class="mb-5">Diagoona is provided by TemplateMo website. You are allowed to use this template for your websites. You are NOT allowed to redistribute this template ZIP file for a download purpose on any template collection website.</p>
-                        <hr class="mb-5">
-                        <p class="mb-5">Diagoona is Bootstrap v4.4.1 layout. This BG is 50% transparent. You can set the background images auto play settings (true or false in line number 33) in templatemo-script.js file in js folder.</p>                        
-                        <a href="about.html" class="btn btn-primary">Continue...</a>
+                        <div class="media my-3 mb-5 tm-service-media tm-service-media-img-l">
+                            <img src="img/services-1.jpg" alt="Image" class="tm-service-img">
+                            <div class="media-body tm-service-text">
+                                <h2 class="mb-4 tm-content-title">Best Services for you</h2>
+                                <p>Our template is simple and effective. This is an alternating simple content with a squared size image. Menu hover is #9CC and text #FFF</p>
+                            </div> 
+                        </div>
+                        <div class="media my-3 mb-5 tm-service-media">                            
+                            <div class="media-body tm-service-text">
+                                <h2 class="mb-4 tm-content-title">Customer Satisfaction</h2>
+                                <p>Feel free to contact TemplateMo for any kind of question. If you wish to support us, you can make a PayPal donation. Thank you.</p>
+                            </div> 
+                            <img src="img/services-2.jpg" alt="Image" class="tm-service-img-r">
+                        </div>
+                        <div class="media my-3 tm-service-media tm-service-media-img-l">
+                            <img src="img/services-3.jpg" alt="Image" class="tm-service-img">
+                            <div class="media-body tm-service-text">
+                                <h2 class="mb-4 tm-content-title">Template Usage</h2>
+                                <p>You are free to use this template for your website either commercial or personal.</p>
+                                <p>You are NOT allowed to redistribute this template ZIP file for a download purpose on any template collection website.</p>
+                            </div> 
+                        </div>                      
                     </section>
                 </main>
             </div>
@@ -76,12 +93,12 @@
             </div>        
             <div class="tm-col-right tm-col-footer">
                 <footer class="tm-site-footer text-right">
-                    <p class="mb-0">Copyright 2021 Clint Edwards
+                    <p class="mb-0">Copyright 2020 Diagoona Co. 
                     
                     | Design: <a rel="nofollow" target="_parent" href="https://templatemo.com" class="tm-text-link">TemplateMo</a></p>
                 </footer>
             </div>  
-        </div>
+        </div>        
 
         <!-- Diagonal background design -->
         <div class="tm-bg">
@@ -95,4 +112,5 @@
     <script src="js/jquery.backstretch.min.js"></script>
     <script src="js/templatemo-script.js"></script>
 </body>
+
 </html>
