Changing the credit

--- a/about.html
+++ b/about.html
@@ -97,9 +97,7 @@
             </div>        
             <div class="tm-col-right tm-col-footer">
                 <footer class="tm-site-footer text-right">
-                    <p class="mb-0">Copyright 2020 Diagoona Co. 
-                    
-                    | Design: <a rel="nofollow" target="_parent" href="https://templatemo.com" class="tm-text-link">TemplateMo</a></p>
+                    <p class="mb-0">&copy;2021 Clint Edwards</p>
                 </footer>
             </div>   
         </div>        
