--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
             </div>        
             <div class="tm-col-right tm-col-footer">
                 <footer class="tm-site-footer text-right">
-                    <p class="mb-0">Copyright 2021 Clint Edwards
-                    
-                    | Design: <a rel="nofollow" target="_parent" href="https://templatemo.com" class="tm-text-link">TemplateMo</a></p>
+                    <p class="mb-0">&copy;2021 Clint Edwards</p>
                 </footer>
             </div>  
         </div>
