changed the logo

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
                     <div class="tm-site-header media">
                         <i class="fas fa-umbrella-beach fa-3x mt-1 tm-logo"></i>
                         <div class="media-body">
-                            <h1 class="tm-sitename text-uppercase">diagoona</h1>
-                            <p class="tm-slogon">new bootstrap template</p>
+                          <h1 class="tm-sitename text-uppercase">Clint Edwards</h1>
+                            <p class="tm-slogon">Web Developer</p>
                         </div>        
                     </div>
                 </div>
