--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <div class="tm-row pt-4">
                 <div class="tm-col-left">
                     <div class="tm-site-header media">
-                        <i class="fas fa-umbrella-beach fa-3x mt-1 tm-logo"></i>
+                        <i class="fas fa-code-branch fa-3x mt-1 tm-logo"></i>
                         <div class="media-body">
                           <h1 class="tm-sitename text-uppercase">Clint Edwards</h1>
                             <p class="tm-slogon">Web Developer</p>
