--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <div class="tm-site-header media">
                         <i class="fas fa-code-branch fa-3x mt-1 tm-logo"></i>
                         <div class="media-body">
-                            <h1 class="tm-sitename text-uppercase">Clint Edwards</h1>
-                            <p class="tm-slogon">Web Developer</p>
+                            <h1 class="tm-sitename text-uppercase">Clint</h1>
+                            <p class="tm-slogon"></p>
                         </div>        
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                                     <a class="nav-link tm-nav-link" href="about.html">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="services.html">Services</a>
+                                    <a class="nav-link tm-nav-link" href="projects.html">Projects</a>
                                 </li>                            
                                 <li class="nav-item">
                                     <a class="nav-link tm-nav-link" href="contact.html">Contact</a>
@@ -56,11 +56,11 @@
                 <div class="tm-col-left"></div>
                 <main class="tm-col-right">
                     <section class="tm-content">
-                        <h2 class="mb-5 tm-content-title">Diagoona HTML Template</h2>
-                        <p class="mb-5">Diagoona is provided by TemplateMo website. You are allowed to use this template for your websites. You are NOT allowed to redistribute this template ZIP file for a download purpose on any template collection website.</p>
+                        <h2 class="mb-5 tm-content-title">Web Developer | Outdoor Enthusiast | Uncle</h2>
+                        <p class="mb-5">Hi Im Clint. I'm a fullstack web developer.<br /> And I love what I do!</p>
                         <hr class="mb-5">
-                        <p class="mb-5">Diagoona is Bootstrap v4.4.1 layout. This BG is 50% transparent. You can set the background images auto play settings (true or false in line number 33) in templatemo-script.js file in js folder.</p>                        
-                        <a href="about.html" class="btn btn-primary">Continue...</a>
+                        <p class="mb-5">Someday I will live in and work from a tiny home travel the country.</p>                        
+                        <a href="about.html" class="btn btn-primary">Learn More</a>
                     </section>
                 </main>
             </div>
@@ -81,7 +81,7 @@
             </div>  
         </div>
 
-        <!-- Diagonal background design -->
+        <!-- background design -->
         <div class="tm-bg">
             <div class="tm-bg-left"></div>
             <div class="tm-bg-right"></div>
