--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
                     <div class="tm-site-header media">
                         <i class="fas fa-code-branch fa-3x mt-1 tm-logo"></i>
                         <div class="media-body">
-                            <h1 class="tm-sitename text-uppercase">Clint Edwards</h1>
+                            <h1 class="tm-sitename text-uppercase">Clint</h1>
                             <p class="tm-slogon">Web Developer</p>
                         </div>        
                     </div>
@@ -41,7 +41,7 @@
                                     <a class="nav-link tm-nav-link" href="about.html">About</a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link tm-nav-link" href="services.html">Services <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link tm-nav-link" href="projects.html">Projects <span class="sr-only">(current)</span></a>
                                 </li>                            
                                 <li class="nav-item">
                                     <a class="nav-link tm-nav-link" href="contact.html">Contact</a>
