changing project page

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Diagoona - About Page</title>
+    <title>About Me</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" /> <!-- https://fonts.google.com/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com/ -->
     <link href="fontawesome/css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
@@ -56,7 +56,29 @@
                 <div class="tm-col-left"></div>
                 <main class="tm-col-right">
                     <section class="tm-content tm-about">
-                        <h2 class="mb-5 tm-content-title">About Diagoona Template</h2>
+                        <div class="media my-3 mb-5 tm-service-media tm-service-media-img-l">
+                            <img src="img/fish.jpg" alt="Image" class="tm-service-img">
+                            <div class="media-body tm-service-text">
+                                <h2 class="mb-4 tm-content-title">I love the outdoors</h2>
+                                <p>My ultimate goal is to have a homestead somewhere in the boonies with satellite internet so I can have the best of both worlds.</p>
+                            </div> 
+                        </div>
+                        <div class="media my-3 mb-5 tm-service-media">                            
+                            <div class="media-body tm-service-text">
+                                <h2 class="mb-4 tm-content-title">Family</h2>
+                                <p>I am a self proclaimed fun uncle. I love spending time with family playing games, making food, or just hanging out.</p>
+                            </div> 
+                            <img src="img/fun_uncle.jpg" alt="Image" class="tm-service-img-r">
+                        </div>
+                        <!-- <div class="media my-3 tm-service-media tm-service-media-img-l">
+                            <img src="img/headshot.jpg" alt="Image" class="tm-service-img">
+                            <div class="media-body tm-service-text">
+                                <h2 class="mb-4 tm-content-title">Template Usage</h2>
+                                <p>You are free to use this template for your website either commercial or personal.</p>
+                                <p>You are NOT allowed to redistribute this template ZIP file for a download purpose on any template collection website.</p>
+                            </div> 
+                        </div>                   -->
+                        <!-- <h2 class="mb-5 tm-content-title">A little about me</h2>
                         <hr class="mb-4">
                         <div class="media my-3">
                             <i class="fas fa-shapes fa-3x p-3 mr-4"></i>
@@ -81,7 +103,7 @@
                             <div class="media-body">
                                 <p>Prasent eget enim vitae sapien egestas aliquet non quis neque. Duis pharetra varius massa, ut bibendum tortor sodales ac.</p>
                             </div> 
-                        </div>                        
+                        </div>                         -->
                     </section>
                 </main>
             </div>
