--- a/index.html
+++ b/index.html
@@ -56,8 +56,15 @@
                 <div class="tm-col-left"></div>
                 <main class="tm-col-right">
                     <section class="tm-content">
-                        <h2 class="mb-5 tm-content-title">Web Developer | Outdoor Enthusiast | Uncle</h2>
-                        <p class="mb-5">Hi Im Clint. I'm a fullstack web developer.<br /> And I love what I do!</p>
+                        <h2 class="mb-5 tm-content-title">Web Developer | Outdoor Enthusiast | Fun Uncle</h2>
+                         <div class="media my-3 mb-5 tm-service-media tm-service-media-img-l">
+                            <img src="img/headshot.jpg" alt="Image" class="tm-service-img">
+                            <div class="media-body tm-service-text">
+                                <h2 class="mb-4 tm-content-title">Hi Im Clint. <br />I'm a fullstack web developer</h2>
+                                <p>And I love what I do!</p>
+                            </div> 
+                        </div>
+                     
                         <hr class="mb-5">
                         <p class="mb-5">Someday I will live in and work from a tiny home travel the country.</p>                        
                         <a href="about.html" class="btn btn-primary">Learn More</a>
