--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Diagoona - Services Page</title>
+    <title>My Projects</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" /> <!-- https://fonts.google.com/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com/ -->
     <link href="fontawesome/css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
@@ -57,25 +57,24 @@
                 <main class="tm-col-right">
                     <section class="tm-content">
                         <div class="media my-3 mb-5 tm-service-media tm-service-media-img-l">
-                            <img src="img/services-1.jpg" alt="Image" class="tm-service-img">
+                            <img src="img/crux.png" alt="Image" class="tm-service-img crux">
                             <div class="media-body tm-service-text">
-                                <h2 class="mb-4 tm-content-title">Best Services for you</h2>
+                                <h2 class="mb-4 tm-content-title">Crux Connect</h2>
                                 <p>Our template is simple and effective. This is an alternating simple content with a squared size image. Menu hover is #9CC and text #FFF</p>
                             </div> 
                         </div>
                         <div class="media my-3 mb-5 tm-service-media">                            
                             <div class="media-body tm-service-text">
-                                <h2 class="mb-4 tm-content-title">Customer Satisfaction</h2>
-                                <p>Feel free to contact TemplateMo for any kind of question. If you wish to support us, you can make a PayPal donation. Thank you.</p>
+                                <h2 class="mb-4 tm-content-title">EzzRoller</h2>
+                                <p>This was one of the first websites I ever built from start to finish.</p>
                             </div> 
-                            <img src="img/services-2.jpg" alt="Image" class="tm-service-img-r">
+                            <img src="img/ezzroller.png" alt="Image" class="tm-service-img-r">
                         </div>
                         <div class="media my-3 tm-service-media tm-service-media-img-l">
-                            <img src="img/services-3.jpg" alt="Image" class="tm-service-img">
+                            <img src="img/my_recipe.png" alt="Image" class="tm-service-img">
                             <div class="media-body tm-service-text">
-                                <h2 class="mb-4 tm-content-title">Template Usage</h2>
-                                <p>You are free to use this template for your website either commercial or personal.</p>
-                                <p>You are NOT allowed to redistribute this template ZIP file for a download purpose on any template collection website.</p>
+                                <h2 class="mb-4 tm-content-title">Recipe App</h2>
+                                <p>This was my first project building out a backend with JS</p>
                             </div> 
                         </div>                      
                     </section>
